크롬 textarea 로그기록 안보이는거 수정
크로미움기반 웹브라우저에서 계속 실행되는것 같음...
페이지 소스 요소에는 있는데 크롬에서만 이상하게 안보임 그래서 로그초기화 하지 않음

--- a/client.html
+++ b/client.html
@@ -56,8 +56,8 @@
       });
 
       socket.on('change name', function(name){
-        $('#chatLog').val('');
-        $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
+        // $('#chatLog').val('');
+        // $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
         $('#name').val(name);
         socket.emit('auth', 'auth test', myRank);
         socket.emit('join', 'join test', myRank); //test를 위해 버튼클릭없이 바로 emit하게 함
